// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`success should create kosko.toml 1`] = `"components = [\\"*\\"]"`;

exports[`success should create package.json 1`] = `
"{
  \\"dependencies\\": {
    \\"@kosko/env\\": \\"^0.4.1\\",
    \\"kubernetes-models\\": \\"^0.3.2\\"
  }
}"
`;

exports[`when the target exists when package.json exists should update package.json 1`] = `
"{
  \\"name\\": \\"foo\\",
  \\"version\\": \\"1.2.3\\",
  \\"dependencies\\": {
    \\"@kosko/env\\": \\"^0.4.1\\",
    \\"debug\\": \\"3.2.1\\",
    \\"kubernetes-models\\": \\"^0.3.2\\"
  }
}"
`;
